--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
     <section class="gallery">
       <div class="card">
         <img src="ebicastle.png" alt="江美城 デジタル御城印">
-        <h2>通常版</h2>
+        <h2>デジタル御城印</h2>
         <p>江美城の名称と江府町歴史民俗資料館を背景としたデジタル御城印です。</p>
         <div class="download">
           <a href="downloads/ebicastle.png" download>ダウンロード</a>
