--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
         <h2>デジタル御城印</h2>
         <p>江美城の名称と江府町歴史民俗資料館を背景としたデジタル御城印です。</p>
         <div class="download">
-          <a href="downloads/ebicastle.png" download>ダウンロード</a>
+          <a href="ebicastle.png" download>ダウンロード</a>
         </div>
       </div>
     </section>
