--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
 <style>
 body {
-  font-family: "Noto Serif JP", "游明朝", serif;
+  font-family: "Yu Mincho", "游明朝", "Hiragino Mincho ProN", "Noto Serif JP", serif;
   background: #f7f6f2;
   color: #222;
   padding: 40px 20px;
@@ -19,7 +19,7 @@ body {
 
 h1 {
   font-size: 26px;
-  margin-bottom: 10px;
+  margin-bottom: 12px;
 }
 
 .lead {
@@ -36,8 +36,8 @@ h1 {
   max-width: 600px;
   width: 100%;
   height: auto;
-  border: 1px solid #ccc;
   background: #fff;
+  border: 1px solid #ccc;
 }
 
 .download {
@@ -46,7 +46,7 @@ h1 {
 }
 
 .download button {
-  padding: 12px 28px;
+  padding: 12px 30px;
   font-size: 14px;
   background: #333;
   color: #fff;
@@ -73,13 +73,13 @@ h1 {
 <h1>江美城 デジタル御城印（通常版）</h1>
 
 <p class="lead">
-江美城の歴史を伝えるデジタル御城印です。<br>
-ダウンロードされる画像には、取得当日の日付が自動で記録されます。
+江美城の歴史と姿を伝えるデジタル御城印です。<br>
+ダウンロードされる画像には、取得当日の和暦日付が自動で記録されます。
 </p>
 
 <div class="image-wrapper">
-  <!-- 表示用：日付なし -->
-  <img id="gojohin" src="ebicastle.png" alt="江美城デジタル御城印">
+  <!-- 表示用：日付なし原本 -->
+  <img id="oshiroin" src="oshiroin-emi.png" alt="江美城 デジタル御城印">
 </div>
 
 <div class="download">
@@ -104,45 +104,59 @@ document.getElementById("downloadBtn").addEventListener("click", () => {
   canvas.width = img.naturalWidth;
   canvas.height = img.naturalHeight;
 
-  // 原本画像を描画
+  // 原本描画
   ctx.drawImage(img, 0, 0);
 
-  // 和暦日付
+  // 描画品質（明朝対策）
+  ctx.imageSmoothingEnabled = true;
+  ctx.imageSmoothingQuality = "high";
+
+  // 和暦（漢数字）
   const wareki = new Intl.DateTimeFormat(
     'ja-JP-u-ca-japanese',
-    {
-      era: 'long',
-      year: 'numeric',
-      month: 'numeric',
-      day: 'numeric'
-    }
-  ).format(new Date());
+    { era: 'long', year: 'numeric', month: 'numeric', day: 'numeric' }
+  ).format(new Date()); // 例：令和八年一月三十日
 
-  // 縦書き・墨色設定
+  // 縦書き用分解
+  const lines = [
+    wareki.match(/^(.*年)/)[1],
+    "",
+    wareki.match(/年(.*月)/)[1],
+    "",
+    wareki.match(/月(.*日)/)[1]
+  ];
+
+  // 明朝・墨色
   ctx.fillStyle = "#2b2b2b";
-  ctx.font = "48px 'Noto Serif JP', serif";
+  ctx.font = "48px 'Yu Mincho', '游明朝', 'Hiragino Mincho ProN', 'Noto Serif JP', serif";
   ctx.textAlign = "left";
   ctx.textBaseline = "bottom";
 
-  const startX = 80;                 // 左余白
-  let startY = canvas.height - 80;   // 下余白
+  const x = 80;                     // 左余白
+  let y = canvas.height - 80;       // 下余白
 
-  const text = `${wareki}`;
-
-  for (const char of text) {
-    ctx.fillText(char, startX, startY);
-    startY -= 52;
+  for (const line of lines) {
+    if (!line) {
+      y -= 32; // 段落の「間」
+      continue;
+    }
+    for (const char of line) {
+      ctx.fillText(char, x, y);
+      y -= 56; // 明朝向け文字間
+    }
+    y -= 24;   // 行間
   }
 
-  // DL
-  const today = new Date();
-  const y = today.getFullYear();
-  const m = String(today.getMonth() + 1).padStart(2, '0');
-  const d = String(today.getDate()).padStart(2, '0');
+  // ファイル名（日付付き）
+  const d = new Date();
+  const ymd =
+    d.getFullYear() +
+    String(d.getMonth() + 1).padStart(2, "0") +
+    String(d.getDate()).padStart(2, "0");
 
   const link = document.createElement("a");
   link.href = canvas.toDataURL("image/png");
-  link.download = `江美城_デジタル御城印_${y}${m}${d}.png`;
+  link.download = `江美城_デジタル御城印_${ymd}.png`;
   link.click();
 });
 </script>
