--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ h1 {
 <body>
 <div class="container">
 
-<h1>江美城 デジタル御城印（通常版）</h1>
+<h1>江美城 デジタル御城印</h1>
 
 <p class="lead">
 江美城の歴史と姿を伝えるデジタル御城印です。<br>
@@ -79,7 +79,7 @@ h1 {
 
 <div class="image-wrapper">
   <!-- 表示用：日付なし原本 -->
-  <img id="oshiroin" src="oshiroin-emi.png" alt="江美城 デジタル御城印">
+  <img id="oshiroin" src="ebicastle.png" alt="江美城 デジタル御城印">
 </div>
 
 <div class="download">
