--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ h1 {
 
 <div class="image-wrapper">
   <!-- 表示用：日付なし原本 -->
-  <img id="oshiroin" src="ebicastle.png" alt="江美城 デジタル御城印">
+  <img id="oshiroin" src="ebicastle.png" crossorigin="anonymous" alt="江美城 デジタル御城印">
 </div>
 
 <div class="download">
