--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@ canvas.toBlob(blob => {
   a.click();
   document.body.removeChild(a);
   URL.revokeObjectURL(url);
-}), "image/png");
+}, "image/png");
 
 </script>
 
