--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@ canvas.toBlob(blob => {
   URL.revokeObjectURL(url);
 }, "image/png");
 
-}); // ← ★ イベントを閉じる（1個だけ）
+}) // ← ★ イベントを閉じる（1個だけ）
 
 
 </script>
