--- a/index.html
+++ b/index.html
@@ -1,180 +1,217 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-<meta charset="UTF-8">
-<title>江美城 デジタル御城印 配布ページ</title>
-
-<style>
-body {
-  font-family: "Yu Mincho", "游明朝", "Hiragino Mincho ProN", "Noto Serif JP", serif;
-  background: #f7f6f2;
-  color: #222;
-  padding: 40px 20px;
-}
-
-.container {
-  max-width: 820px;
-  margin: 0 auto;
-}
-
-h1 {
-  font-size: 26px;
-  margin-bottom: 12px;
-}
-
-.lead {
-  font-size: 15px;
-  line-height: 1.8;
-  margin-bottom: 30px;
-}
-
-.image-wrapper {
-  text-align: center;
-}
-
-.image-wrapper img {
-  max-width: 600px;
-  width: 100%;
-  height: auto;
-  background: #fff;
-  border: 1px solid #ccc;
-}
-
-.download {
-  text-align: center;
-  margin-top: 30px;
-}
-
-.download button {
-  padding: 12px 30px;
-  font-size: 14px;
-  background: #333;
-  color: #fff;
-  border: none;
-  cursor: pointer;
-}
-
-.download button:hover {
-  opacity: 0.85;
-}
-
-.note {
-  font-size: 13px;
-  color: #555;
-  margin-top: 25px;
-  line-height: 1.7;
-}
-</style>
-</head>
-
-<body>
-<div class="container">
-
-<h1>江美城 デジタル御城印</h1>
-
-<p class="lead">
-江美城の歴史と姿を伝えるデジタル御城印です。<br>
-ダウンロードされる画像には、取得当日の和暦日付が自動で記録されます。
-</p>
-
-<div class="image-wrapper">
-  <!-- 表示用：日付なし原本 -->
-  <img id="gojohin" src="ebicastle.png" alt="江美城 デジタル御城印">
-</div>
-
-<div class="download">
-  <button id="downloadBtn">デジタル御城印をダウンロード</button>
-</div>
-
-<p class="note">
-※ 本御城印は個人利用の範囲でお楽しみください。<br>
-※ 無断転載・再配布・商用利用はご遠慮ください。
-</p>
-
-</div>
-
-<script>
-document.getElementById("downloadBtn").addEventListener("click", async () => {
-
-  // ① 画像を fetch で取得
-  const response = await fetch("ebicastle.png");
-  const blob = await response.blob();
-
-  // ② Blob → Image
-  const img = new Image();
-  img.src = URL.createObjectURL(blob);
-
-  img.onload = () => {
-    const canvas = document.createElement("canvas");
-    const ctx = canvas.getContext("2d");
-
-    canvas.width = img.width;
-    canvas.height = img.height;
-
-    // 原本描画
-    ctx.drawImage(img, 0, 0);
-
-    // 明朝対策
-    ctx.imageSmoothingEnabled = true;
-    ctx.imageSmoothingQuality = "high";
-
-    // 和暦生成
-    const wareki = new Intl.DateTimeFormat(
-      "ja-JP-u-ca-japanese",
-      { era: "long", year: "numeric", month: "numeric", day: "numeric" }
-    ).format(new Date());
-
-    // 年・月・日 分解
-    const lines = [
-      wareki.match(/^(.*年)/)[1],
-      "",
-      wareki.match(/年(.*月)/)[1],
-      "",
-      wareki.match(/月(.*日)/)[1]
-    ];
-
-    // 明朝・墨色
-    ctx.fillStyle = "#2b2b2b";
-    ctx.font =
-      "48px 'Yu Mincho','游明朝','Hiragino Mincho ProN','Noto Serif JP',serif";
-    ctx.textAlign = "left";
-    ctx.textBaseline = "bottom";
-
-    const x = 80;
-    let y = canvas.height - 80;
-
-    for (const line of lines) {
-      if (!line) {
-        y -= 32;
-        continue;
+  <meta charset="UTF-8">
+  <title>江美城デジタル御城印｜ダウンロード</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <style>
+    body {
+      font-family: "Hiragino Kaku Gothic ProN", "Yu Gothic", sans-serif;
+      margin: 0;
+      background: #f4f6f8;
+      color: #333;
+      line-height: 1.8;
+    }
+    header {
+      background: linear-gradient(135deg, #7a1f1f, #b33a3a);
+      color: #fff;
+      padding: 2.5rem 1rem;
+      text-align: center;
+    }
+    header h1 {
+      margin: 0;
+      font-size: 2rem;
+      letter-spacing: 0.1em;
+    }
+    header p {
+      margin-top: 0.5rem;
+      font-size: 1rem;
+      opacity: 0.9;
+    }
+    main {
+      max-width: 960px;
+      margin: 2rem auto;
+      padding: 0 1rem;
+    }
+    section {
+      background: #fff;
+      border-radius: 10px;
+      padding: 1.5rem;
+      margin-bottom: 2rem;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.05);
+    }
+    h2 {
+      border-left: 6px solid #b33a3a;
+      padding-left: 0.6rem;
+      margin-top: 0;
+      font-size: 1.4rem;
+    }
+    .goshuin-list {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
+      gap: 1.5rem;
+      margin-top: 1rem;
+    }
+    .goshuin-card {
+      border: 1px solid #ddd;
+      border-radius: 8px;
+      padding: 1rem;
+      text-align: center;
+      background: #fafafa;
+    }
+    .goshuin-card img {
+      max-width: 100%;
+      height: auto;
+      border-radius: 4px;
+      margin-bottom: 0.8rem;
+    }
+    .goshuin-card h3 {
+      margin: 0.5rem 0;
+      font-size: 1.1rem;
+    }
+    .goshuin-card p {
+      font-size: 0.9rem;
+      color: #555;
+    }
+    .download-btn {
+      display: inline-block;
+      margin-top: 0.8rem;
+      padding: 0.6rem 1.2rem;
+      background: #7a1f1f;
+      color: #fff;
+      text-decoration: none;
+      border-radius: 20px;
+      font-size: 0.9rem;
+    }
+    .download-btn:hover {
+      background: #5e1717;
+    }
+    .note {
+      font-size: 0.85rem;
+      color: #666;
+    }
+    footer {
+      text-align: center;
+      padding: 1.5rem 1rem;
+      font-size: 0.8rem;
+      color: #666;
+    }
+  </style>
+  <script>
+    function toKanji(num) {
+      const kanjiNums = ['','一','二','三','四','五','六','七','八','九'];
+      if (num === 0) return '〇';
+      if (num <= 10) return num === 10 ? '十' : kanjiNums[num];
+      if (num < 20) return '十' + kanjiNums[num - 10];
+      if (num < 100) {
+        const tens = Math.floor(num / 10);
+        const ones = num % 10;
+        return kanjiNums[tens] + '十' + (ones ? kanjiNums[ones] : '');
       }
-      for (const char of line) {
-        ctx.fillText(char, x, y);
-        y -= 56;
-      }
-      y -= 24;
+      return num;
     }
 
-// ファイル名
-const d = new Date();
-const ymd =
-  d.getFullYear() +
-  String(d.getMonth() + 1).padStart(2, "0") +
-  String(d.getDate()).padStart(2, "0");
+    function toWareki(date) {
+      const eras = [
+        { name: '令和', start: new Date(2019, 4, 1) },
+        { name: '平成', start: new Date(1989, 0, 8) },
+        { name: '昭和', start: new Date(1926, 11, 25) },
+        { name: '大正', start: new Date(1912, 6, 30) },
+        { name: '明治', start: new Date(1868, 0, 25) }
+      ];
+      for (const era of eras) {
+        if (date >= era.start) {
+          const yearNum = date.getFullYear() - era.start.getFullYear() + 1;
+          const year = yearNum === 1 ? '元' : toKanji(yearNum);
+          const month = toKanji(date.getMonth() + 1);
+          const day = toKanji(date.getDate());
+          return `${era.name}${year}年${month}月${day}日`;
+        }
+      }
+      return '';
+    }
 
-// DL処理
-canvas.toBlob(blob => {
-  const url = URL.createObjectURL(blob);
-  const a = document.createElement("a");
-  a.href = url;
-  a.download = `江美城_デジタル御城印_${ymd}.png`;
-  document.body.appendChild(a);
-  a.click();
-  document.body.removeChild(a);
-  URL.revokeObjectURL(url);
-}, "image/png");
+    function applyDateToImages() {
+      const today = new Date();
+      const wareki = toWareki(today);
+      document.querySelectorAll('.goshuin-card').forEach(card => {
+        let label = document.createElement('div');
+        label.textContent = `日付：${wareki}`;
+        label.style.fontSize = '0.8rem';
+        label.style.marginTop = '0.3rem';
+        label.style.color = '#444';
+        card.appendChild(label);
+      });
+    }
 
-</script>
+    window.addEventListener('DOMContentLoaded', applyDateToImages);
+  </script>
+</head>
+<body>
+
+<header>
+  <h1>江美城 デジタル御城印</h1>
+  <p>― 山陰の歴史を、あなたの端末に ―</p>
+</header>
+
+<main>
+
+  <section>
+    <h2>デジタル御城印について</h2>
+    <p>
+      江美城（えみじょう）は、伯耆国に築かれた中世山城で、中国地方の地方城郭としては
+      きわめて特徴的な構造を持つ城として知られています。
+    </p>
+    <p>
+      本ページでは、江美城をより身近に楽しんでいただくため、
+      <strong>スマートフォンやPCで保存・鑑賞できる「デジタル御城印」</strong>を配布しています。
+    </p>
+  </section>
+
+  <section>
+    <h2>ダウンロード</h2>
+
+    <div class="goshuin-list">
+
+      <div class="goshuin-card">
+        <canvas class="goshuin-canvas" width="800" height="1100" data-src="$&"></canvas>
+        <h3>$1</h3>
+        <p>$2</p>
+        <a class="download-btn" href="#" onclick="downloadCanvas(this)">
+          PNGをダウンロード
+        </a>
+      </div>
+
+      <div class="goshuin-card">
+        <canvas class="goshuin-canvas" width="800" height="1100" data-src="$&"></canvas>
+        <h3>$1</h3>
+        <p>$2</p>
+        <a class="download-btn" href="#" onclick="downloadCanvas(this)">
+          PNGをダウンロード
+        </a>
+      </div>
+
+    </div>
+
+    <p class="note">
+      ※ 個人利用の範囲でお楽しみください。無断転載は禁止・再配布は禁止しています。
+    </p>
+  </section>
+
+  <section>
+    <h2>利用上の注意</h2>
+    <ul>
+      <li>デジタル御城印は非公式の参拝証明であり、実際の登城証明を代替するものではありません。</li>
+      <li>SNS等での紹介の際は、出典として「江美城デジタル御城印」と明記してください。</li>
+      <li>内容・デザインは予告なく変更される場合があります。</li>
+    </ul>
+  </section>
+
+</main>
+
+<footer>
+  <p>© 江美城デジタル御城印プロジェクト</p>
+</footer>
 
 </body>
 </html>
