--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <style>
     @font-face {
       font-family: "KouzanBrush";
-      src: url("fonts/KouzanBrushFont.ttf") format("truetype");
+      src: url("KouzanBrushFont.ttf") format("truetype");
     }
 
     body {
