--- a/index.html
+++ b/index.html
@@ -135,14 +135,14 @@
       <canvas class="goshuin-canvas" width="800" height="1100" data-image="ebicastle.jpg"></canvas>
       <h3>通常版</h3>
       <p>江美城の名称と城紋を配した基本デザイン。</p>
-      <a class="download-btn" href="#" onclick="downloadCanvas(this)">日付入りPNGをダウンロード</a>
+      <a class="download-btn" href="ebicastle.png" onclick="downloadCanvas(this)">日付入りPNGをダウンロード</a>
     </div>
 
     <div class="goshuin-card">
       <canvas class="goshuin-canvas" width="800" height="1100" data-image="ebicastle.jpg"></canvas>
       <h3>特別版</h3>
       <p>発掘調査成果をモチーフとした限定意匠。</p>
-      <a class="download-btn" href="#" onclick="downloadCanvas(this)">日付入りPNGをダウンロード</a>
+      <a class="download-btn" href="ebicastle.png" onclick="downloadCanvas(this)">日付入りPNGをダウンロード</a>
     </div>
 
   </div>
