--- a/index.html
+++ b/index.html
@@ -2,24 +2,17 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
-  <title>江美城デジタル御城印｜公式ダウンロード</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+  <title>デジタル御城印 ダウンロード｜江美城</title>
   <style>
-    @font-face {
-      font-family: "KouzanBrush";
-      src: url("KouzanBrushFont.ttf") format("truetype");
-    }
-
     body {
-      font-family: "Hiragino Kaku Gothic ProN", "Yu Gothic", sans-serif;
+      font-family: "Hiragino Mincho ProN", "Yu Mincho", serif;
       margin: 0;
-      background: #f4f6f8;
-      color: #333;
-      line-height: 1.8;
+      background: #f5f3ef;
+      color: #222;
     }
     header {
-      background: linear-gradient(135deg, #7a1f1f, #b33a3a);
+      background: linear-gradient(135deg, #2f3e46, #3a5a40);
       color: #fff;
       padding: 2.5rem 1rem;
       text-align: center;
@@ -27,81 +20,84 @@
     header h1 {
       margin: 0;
       font-size: 2rem;
-      letter-spacing: 0.15em;
+      letter-spacing: 0.1em;
     }
     header p {
       margin-top: 0.5rem;
-      font-size: 1rem;
+      font-size: 0.95rem;
       opacity: 0.9;
     }
     main {
-      max-width: 1000px;
+      max-width: 1100px;
       margin: 2rem auto;
-      padding: 0 1rem;
+      padding: 0 1rem 3rem;
     }
-    section {
+    .intro {
       background: #fff;
+      padding: 1.5rem;
       border-radius: 12px;
-      padding: 1.8rem;
+      box-shadow: 0 6px 18px rgba(0,0,0,0.08);
       margin-bottom: 2rem;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.05);
     }
-    h2 {
-      border-left: 6px solid #7a1f1f;
-      padding-left: 0.6rem;
+    .intro h2 {
       margin-top: 0;
       font-size: 1.4rem;
     }
-    .goshuin-list {
+    .gallery {
       display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-      gap: 2rem;
-      margin-top: 1.5rem;
+      grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
+      gap: 1.5rem;
     }
-    .goshuin-card {
-      border: 1px solid #ddd;
-      border-radius: 10px;
-      padding: 1.2rem;
-      text-align: center;
-      background: #fafafa;
+    .card {
+      background: #fff;
+      border-radius: 14px;
+      overflow: hidden;
+      box-shadow: 0 6px 18px rgba(0,0,0,0.08);
+      display: flex;
+      flex-direction: column;
     }
-    canvas {
+    .card img {
       width: 100%;
-      height: auto;
-      border-radius: 6px;
-      background: #eee;
+      display: block;
     }
-    .goshuin-card h3 {
-      margin: 0.8rem 0 0.4rem;
+    .card-body {
+      padding: 1rem;
+      flex: 1;
+    }
+    .card-body h3 {
+      margin: 0 0 0.5rem;
       font-size: 1.1rem;
     }
-    .goshuin-card p {
+    .card-body p {
+      margin: 0 0 1rem;
       font-size: 0.9rem;
-      color: #555;
+      line-height: 1.6;
     }
-    .download-btn {
+    .download {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      margin-top: auto;
+      padding: 1rem;
+    }
+    .download a {
       display: inline-block;
-      margin-top: 0.8rem;
       padding: 0.6rem 1.4rem;
-      background: #7a1f1f;
+      background: #3a5a40;
       color: #fff;
       text-decoration: none;
-      border-radius: 24px;
+      border-radius: 999px;
       font-size: 0.9rem;
     }
-    .download-btn:hover {
-      background: #5e1717;
-    }
-    .note {
-      font-size: 0.85rem;
-      color: #666;
-      margin-top: 1rem;
+    .download a:hover {
+      background: #2f3e46;
     }
     footer {
-      text-align: center;
-      padding: 1.5rem 1rem 2rem;
+      background: #e9e6df;
+      padding: 1.5rem 1rem;
       font-size: 0.8rem;
-      color: #666;
+      text-align: center;
+      color: #555;
     }
   </style>
 </head>
@@ -109,119 +105,38 @@
 
 <header>
   <h1>江美城 デジタル御城印</h1>
-  <p>― 伯耆国・中世山城の記憶を、いまに ―</p>
+  <p>Digital Goshuin / Gojo-in</p>
 </header>
 
 <main>
+  <section class="intro">
+    <h2>デジタル御城印について</h2>
+    <p>
+      本ページでは、江美城をモチーフとしたデジタル御城印を無料でダウンロードいただけます。
+      個人利用（鑑賞・保存・SNS投稿）を目的としてお楽しみください。
+    </p>
+    <p>
+      ※ 商用利用・再配布・改変はご遠慮ください。
+    </p>
+  </section>
 
-<section>
-  <h2>デジタル御城印について</h2>
-  <p>
-    江美城（えみじょう）は伯耆国に築かれた中世山城で、中国地方の地方城郭としては
-    特異な構造を持つ城として知られています。
-  </p>
-  <p>
-    本ページでは、江美城を訪れた記念として保存できる
-    <strong>日付入りデジタル御城印</strong>を配布しています。
-  </p>
-</section>
-
-<section>
-  <h2>ダウンロード</h2>
-
-  <div class="goshuin-list">
-
-    <div class="goshuin-card">
-      <canvas class="goshuin-canvas" width="800" height="1100" data-image="ebicastle.jpg"></canvas>
-      <h3>通常版</h3>
-      <p>江美城の名称と城紋を配した基本デザイン。</p>
-      <a class="download-btn" href="ebicastle.png" onclick="downloadCanvas(this)">日付入りPNGをダウンロード</a>
+    <section class="gallery">
+    <div class="card">
+      <img src="images/ebijo_gojoin_01.jpg" alt="江美城 デジタル御城印（標準）">
+      <div class="card-body">
+        <h3>江美城 御城印（標準）</h3>
+        <p>江美城の城名と意匠を配した、基本デザインのデジタル御城印です。</p>
+      </div>
+      <div class="download">
+        <a href="downloads/ebijo_gojoin_01.png" download>ダウンロード</a>
+      </div>
     </div>
-
-    <div class="goshuin-card">
-      <canvas class="goshuin-canvas" width="800" height="1100" data-image="ebicastle.jpg"></canvas>
-      <h3>特別版</h3>
-      <p>発掘調査成果をモチーフとした限定意匠。</p>
-      <a class="download-btn" href="ebicastle.png" onclick="downloadCanvas(this)">日付入りPNGをダウンロード</a>
-    </div>
-
-  </div>
-
-  <p class="note">※ 個人利用の範囲でお楽しみください。画像の再配布・転載は禁止です。</p>
-</section>
-
-<section>
-  <h2>利用上の注意</h2>
-  <ul>
-    <li>本御城印は非公式のデジタルコンテンツです。</li>
-    <li>実際の登城・来訪を証明するものではありません。</li>
-    <li>内容・デザインは予告なく変更される場合があります。</li>
-  </ul>
-</section>
-
+  </section>
 </main>
 
 <footer>
-  <p>© 江美城デジタル御城印プロジェクト</p>
+  <p>© 江美城調査・保存関連事業</p>
 </footer>
-
-<script>
-function toKanji(num) {
-  const k = ['','一','二','三','四','五','六','七','八','九'];
-  if (num === 10) return '十';
-  if (num < 10) return k[num];
-  if (num < 20) return '十' + k[num-10];
-  if (num < 100) return k[Math.floor(num/10)] + '十' + (num%10 ? k[num%10] : '');
-  return num;
-}
-
-function toWareki(date) {
-  const eras = [
-    { name: '令和', start: new Date(2019,4,1) },
-    { name: '平成', start: new Date(1989,0,8) },
-    { name: '昭和', start: new Date(1926,11,25) }
-  ];
-  for (const e of eras) {
-    if (date >= e.start) {
-      const y = date.getFullYear() - e.start.getFullYear() + 1;
-      return `${e.name}${y===1?'元':toKanji(y)}年${toKanji(date.getMonth()+1)}月${toKanji(date.getDate())}日`;
-    }
-  }
-  return '';
-}
-
-function drawGoshuin(canvas) {
-  const ctx = canvas.getContext('2d');
-  const img = new Image();
-  img.src = canvas.dataset.image;
-
-  img.onload = () => {
-    ctx.drawImage(img, 0, 0, canvas.width, canvas.height);
-    const wareki = toWareki(new Date());
-
-    ctx.save();
-    ctx.translate(canvas.width - 50, canvas.height - 60);
-    ctx.rotate(-Math.PI / 2);
-    ctx.font = '34px KouzanBrush, serif';
-    ctx.fillStyle = '#111';
-    ctx.textAlign = 'left';
-    ctx.fillText(`登城之日　${wareki}`, 0, 0);
-    ctx.restore();
-  };
-}
-
-function downloadCanvas(btn) {
-  const canvas = btn.closest('.goshuin-card').querySelector('canvas');
-  const a = document.createElement('a');
-  a.download = 'ebicastle.png';
-  a.href = canvas.toDataURL('image/png');
-  a.click();
-}
-
-window.addEventListener('DOMContentLoaded', () => {
-  document.querySelectorAll('.goshuin-canvas').forEach(drawGoshuin);
-});
-</script>
 
 </body>
 </html>
