--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
     .card-body {
       padding: 1rem;
       flex: 1;
+      text-align: center;
     }
     .card-body h3 {
       margin: 0 0 0.5rem;
@@ -122,13 +123,13 @@
 
     <section class="gallery">
     <div class="card">
-      <img src="images/ebijo_gojoin_01.jpg" alt="江美城 デジタル御城印（標準）">
+      <img src="ebicastle.png" alt="江美城 デジタル御城印（標準）">
       <div class="card-body">
         <h3>江美城 御城印（標準）</h3>
         <p>江美城の城名と意匠を配した、基本デザインのデジタル御城印です。</p>
       </div>
       <div class="download">
-        <a href="downloads/ebijo_gojoin_01.png" download>ダウンロード</a>
+        <a href="ebicastle.png" download>ダウンロード</a>
       </div>
     </div>
   </section>
