--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 
     <section class="gallery">
     <div class="card">
-      <img src="ebicastle.png" alt="江美城 デジタル御城印（標準）">
+      <img src="ebicastle2.png" alt="江美城 デジタル御城印（標準）">
       <div class="card-body">
         <h3>江美城 御城印（標準）</h3>
         <p>江美城の城名と意匠を配した、基本デザインのデジタル御城印です。</p>
