--- a/index.html
+++ b/index.html
@@ -57,7 +57,9 @@
       flex-direction: column;
     }
     .card img {
-      width: 100%;
+      width: 80%;
+      max-width: 300px;
+      margin: 1rem auto 0;
       display: block;
     }
     .card-body {
@@ -123,7 +125,7 @@
 
     <section class="gallery">
     <div class="card">
-      <img src="ebicastle2.png" alt="江美城 デジタル御城印（標準）">
+      <img src="ebicastle2.jpg" alt="江美城 デジタル御城印（標準）">
       <div class="card-body">
         <h3>江美城 御城印（標準）</h3>
         <p>江美城の城名と意匠を配した、基本デザインのデジタル御城印です。</p>
