--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
       <img src="ebicastle2.png" alt="江美城 デジタル御城印">
       <div class="card-body">
         <h3>江美城 御城印</h3>
-        <p>江美城の城名と意匠を配した、基本デザインのデジタル御城印です。</p>
+        <p>江美城の城名と江府町歴史民俗資料館を配したデザインのデジタル御城印です。</p>
       </div>
       <div class="download">
         <a href="ebicastle.png" download>ダウンロード</a>
