--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
     <h2>デジタル御城印について</h2>
     <p>
       本ページでは、江美城をモチーフとしたデジタル御城印を無料でダウンロードいただけます。<br>
-      個人利用（鑑賞・保存・SNS投稿）を目的としてお楽しみください。
+      個人利用（鑑賞・保存）を目的としてお楽しみください。
     </p>
     <p>
       ※ 商用利用・再配布・改変はご遠慮ください。
